# Sui-VoxDental

./: .gitignore  readme.md
voxdental/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  check_env.py  check_ffmpeg.py  commit_msg.txt  demo.py  demo_output.txt  dental_combinations.md  deploy-gcp.sh  diagnostic_api.py  docker-compose.yml  download_vosk_models.py  fix_db.py  fix_db_gender.py  openapi-dns.yaml  pyproject.toml  requirements.txt  test_nlp_stop.py  test_phrases.md  test_whisper_load.py  voxdental.db
voxdental/documentacion_tecnica/: 00_indice.md  01_arquitectura.md  02_desarrollo_local.md  03_despliegue_produccion.md  04_frontend.md  05_backend.md
voxdental/frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
voxdental/frontend/src/: App.jsx  index.css  main.jsx  translations.js
voxdental/frontend/src/components/: AdminPanel.jsx  ClinicalRecordModal.jsx  DesignToggle.jsx  EgoSHome.jsx  Login.jsx  ManualEntryModal.jsx  OdontogramView.jsx  PatientDirectoryModal.jsx  PatientSelector.jsx  ProfileModal.jsx  Register.jsx  SpeechReportModal.jsx  SuiEgoHome.jsx  SymbiosisLogo.jsx  ToothSVG.jsx  VerifyEmail.jsx  WelcomeScreen.jsx
voxdental/frontend/src/context/: AuthContext.jsx  ThemeContext.jsx  (+1 more)
voxdental/scratch/: openapi.json  test_smtp.py  verify_feedback.py
voxdental/src/: main.py
voxdental/src/api/: routes.py  schemas.py
voxdental/src/core/: auth.py  email_service.py  nlp.py  validator.py
voxdental/src/models/: database.py
voxdental/src/services/: vosk_service.py  whisper.py
(+10 files in other folders)
