[tool.poetry]
name = "voxdental"
version = "0.1.0"
description = "Hands-free voice odontogram system"
authors = ["Antigravity <bot@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.0"
python-multipart = "^0.0.7"
openai-whisper = "^20231117"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
